# worktree

./: .gitignore  CLAUDE.md  Cargo.toml  FEEDBACK.md  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
.worktree/: .gitignore  README.md  SETUP.md  close.sh  run.sh  settings.json  setup.sh  stop.sh
commands/: worktree.md
scripts/worktree/: README.template.md  allocate-ports.py  close.sh  deallocate-ports.py  detect-worktree.sh  init.py  list.py  open-terminal.sh  run.sh  stop.sh
src/: cli.rs  completions.rs  main.rs  names.rs
src/commands/: cleanup.rs  close.rs  common.rs  init.rs  list.rs  mod.rs  new.rs  open.rs  path.rs  rename.rs  run.rs  status.rs  stop.rs
src/config/: mod.rs  paths.rs  settings.rs  state.rs
src/git/: worktree.rs
src/ports/: allocator.rs  checker.rs  mod.rs
src/scripts/: generator.rs  mod.rs  runner.rs
src/terminal/: launcher.rs  mod.rs
