[package]
name = "worktree"
version = "0.1.0"
edition = "2021"
description = "Manage git worktrees with port allocation"
license = "MIT"
authors = ["Maarten"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
colored = "2"
which = "6"
socket2 = "0.5"
walkdir = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
